--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Coding Quiz</title>
 </head>
-<body>    
-    <main>
-        <div class="quiz-section">
-            <div>
+<body>
+    <div class="wrapper">
+        <header>
+            <h1>The Programmer's Quiz</h1>
+        </header>
+        <div class="card">
+            <div class="card-header">
+                <h2>View High Scores</h2>
+                <h2>Time: <span id="countdown"></span></h2>
+            </div>
+            <div id="card-body" class="card-body">
                 <button id="start-btn">Click to Begin</button>
             </div>
+            <div class="card-footer">
+                {display correct, or incorrect here.}
+            </div>
         </div>
-    </main>
-    <footer>
-
-    </footer>
+    </div>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
